# gaia-s-pen

./: Cargo.toml
src/: app.rs  book.rs  lib.rs  main.rs
src/app/: achievement.rs  anime_effect.rs  cursor_icon.rs  init.rs  interaction.rs  leaderboard.rs  status.rs  theme.rs  ui.rs
src/app/achievement/: perfect_match.rs  time_xxx_s.rs  zero_repaint.rs  zero_undo.rs
src/app/anime_effect/: kind.rs
src/app/anime_effect/kind/: circle_q.rs  line_q.rs
src/app/interaction/: handle.rs  plugin.rs
src/app/ui/: builder.rs  kind.rs  plugin.rs  switch_btn.rs  timer.rs
src/app/ui/builder/: slider.rs
src/app/ui/kind/: slider.rs
src/book/: page.rs
src/book/page/: about.rs  dev.rs  game.rs  help.rs  menu.rs  settings.rs  settings_audio.rs
src/book/page/about/: audio.rs  main.rs  visual.rs
src/book/page/settings/: audio.rs  control.rs  display.rs
