[package]
name = "gaia-s-pen"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
bevy-persistent = { version = "0.4.2", features = ["bincode", "json"] }
bevy-ui-navigation = "0.33.1"
bevy_mod_picking = { version = "0.17.0", default-features = false, features = [
  "backend_bevy_ui",
  "backend_raycast",
  "backend_sprite",
  "selection",
] }
bevy_prototype_lyon = "0.10.0"
bevy_tweening = "0.9.0"
chrono = "0.4.31"
circular-queue = "0.2.6"
dirs = "5.0.1"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
webbrowser = "0.8.12"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
